src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
  --footer-height: 115px;

  height: 100%;
}

body {
  height: 100%;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  position: relative;
}

html {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow-x: hidden;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

/* TEXT */
@font-face {
  font-family: "NeueEinstellung";
  src: local("NeueEinstellung-Regular"), url(./assets/fonts/NeueEinstellung-Regular.woff2) format("woff2"),
    url(./assets/fonts/NeueEinstellung-Regular.woff) format("woff"),
    url(./assets/fonts/NeueEinstellung-Regular.eot) format("truetype");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

* {
  font-family: "NeueEinstellung";
}

.text-6xl {
  font-family: "NeueEinstellung";
  font-size: 60px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.5;
  letter-spacing: normal;
}
.text-5xl {
  font-family: "NeueEinstellung";
  font-size: 48px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.5;
  letter-spacing: normal;
}
.text-4xl {
  font-family: "NeueEinstellung";
  font-size: 36px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.11;
  letter-spacing: normal;
}
.text-3xl {
  font-family: "NeueEinstellung";
  font-size: 30px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.2;
  letter-spacing: normal;
}
.text-2xl {
  font-family: "NeueEinstellung";
  font-size: 24px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.33;
  letter-spacing: normal;
}
.text-xl {
  font-family: "NeueEinstellung";
  font-size: 20px; // font-family: Gotham;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.4;
}
.text-lg {
  font-family: "NeueEinstellung";
  font-size: 18px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.56;
  letter-spacing: normal;
}
.text-base {
  font-family: "NeueEinstellung";
  font-size: 16px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.5;
  letter-spacing: normal;
}
.text-sm {
  font-family: "NeueEinstellung";
  font-size: 14px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.43;
}
.text-xs {
  font-family: "NeueEinstellung";
  font-size: 12px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.33;
}
.text-supporting-2 {
  font-family: "NeueEinstellung";
  font-size: 10px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.2;
}
.text-supporting-1 {
  font-family: "NeueEinstellung";
  font-size: 8px;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.25;
}

@layer components {
  /* LINKS */
  a.link {
    @apply text-blue-60 underline;
  }
  a.secondary {
    @apply text-white;
  }

  /* DROPDOWNS */
  .dropdown-menu {
    border-radius: 8px;
    box-shadow: 0px 2px 15px 0px rgba(179, 186, 197, 0.5);
    z-index: 100;

    @apply bg-white p-3 flex flex-col;
  }

  .dropdown-item {
    width: 100%;
    min-width: 150px;
    max-width: 250px;

    @apply no-underline py-1 px-2 hover:bg-l-neutral-20 active:bg-l-neutral-30 rounded-1px text-neutral-900 text-sm flex items-center;

    img {
      height: 14px;
    }
  }

  /* INPUTS */
  input[type="checkbox"] {
    @apply border-2 border-neutral-500 rounded-1px text-xs text-neutral-500 w-3 h-3;
  }
  input[type="text"],
  input[type="email"],
  input[type="password"] {
    @apply ring-1 ring-m-neutral-100 rounded focus:ring-blue-60 text-neutral-500 placeholder-m-neutral-100 text-sm px-3 py-2;

    &:focus {
      outline: none !important;
    }

    &.error {
      @apply border-l-8 focus:ring-pink-60 border-pink-60 ring-pink-60 bg-pink-10;
    }

    &.dense {
      @apply px-1 py-0;
    }

    &.right-icon {
      @apply pr-7;
    }

    &.no-ring {
      @apply ring-0 focus:ring-1 focus:ring-blue-60;
    }
  }
  input[type="number"] {
    @apply appearance-none flex items-center justify-center bg-l-neutral-10 border border-m-neutral-60 text-center text-blue-60 outline-none;
    -moz-appearance: textfield;
  }
  input[type="number"]::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* BUTTONS */
  button.primary,
  button.secondary {
    height: 32px;
    border-radius: 4px;
    @apply px-4 py-2 text-sm;
  }
  button.primary {
    @apply flex items-center justify-center bg-blue-60 transition duration-200 ease-in-out hover:bg-blue-80 py-2 rounded text-white text-sm;
    &:disabled {
      @apply bg-blue-30 cursor-default;
    }
  }
  button.secondary {
    @apply bg-white text-blue-60 hover:bg-blue-20;
  }
  button.square {
    @apply p-0 flex justify-center items-center;

    img {
      @apply h-4;
    }
  }
  button.secondary_dialog {
    @apply text-sm text-red-60 rounded transform duration-200 ease-in-out hover:bg-blue-20;
  }
  button.button_link {
    @apply text-blue-60 transform duration-200 hover:text-blue-80;
  }
  button.text_underline {
    @apply underline;
  }

  /* EVENTS */
  .pointer-events-none.descendants {
    * {
      pointer-events: none;
    }

    &.only {
      @apply pointer-events-auto;
    }
  }

  /* TABLES */
  th {
    @apply text-left;
  }

  /* DRAG AND DROP */
  .drag-over-effect {
    box-shadow: inset 0px 0px 0px 0.15rem var(--color-blue-40);

    @apply bg-opacity-30 bg-blue-50 rounded-6px;
  }
}

/* OLD STYLES */
.Alert {
  width: 70%;
  margin: auto;
}
.App-header {
  background-color: #222;
  height: 150px;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

.popup-content {
  display: flex;
  flex-direction: column;
  align-content: center;
  border-radius: 10px;
  background-color: white;
}

.popup-content.popup--full-screen {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  align-items: center;
  width: 483px !important;
}

.popup--full-screen__content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  width: 100%;
  height: 100%;
}

.buttons-wrapper {
  display: flex;
  width: 100%;
  justify-content: flex-end;
  margin-top: 10px;
  border-top: #ededed 1px solid;
}

.message-wrapper {
  display: flex;
  flex-direction: column;
  width: 80%;
  text-align: left;
  padding-top: 10px;
}

.popup--full-screen__content .message-wrapper {
  margin: auto;

  h1 {
    margin-top: 25px;
    font-size: 25px;
    font-weight: 900;
  }

  h2 {
    font-size: 15px;
    color: #707070;
    font-weight: 400;
    line-height: 1.5;
  }
}

.button-primary {
  color: #4b66ff;
}

.popup--full-screen__content .button-primary {
  width: 175px;
  height: 52px;
  border-radius: 4px;
  background-color: #4385f4;
  color: white;
  font-size: 19px;
}

.popup--full-screen__content .buttons-wrapper {
  border: 0;
  justify-content: center;
}

.popup--full-screen__close-button-wrapper {
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 0;
}

.popup--full-screen__close-button-wrapper img {
  width: 24px;
  height: 24px;
}

.logo img {
  width: 45px;
  height: 30px;
}

.logo.logo-runoutstorage {
  margin: 30px 0 10px 45px;
  width: 50px;
}

.popup--full-screen .logo img {
  width: 40px;
}

.popup-overlay a {
  width: 150px;
  height: 30px;
  margin: 0 auto;
  background-color: #79bbff;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  border-radius: 6px;
  border: 1px solid #84bbf3;
  display: inline-block;
  cursor: pointer;
  color: #fff;
  font-size: 15px;
  font-weight: bold;
  padding: 6px 24px;
  text-decoration: none;
}

.popup-overlay a:first-child {
  margin-bottom: 30px;
}

.loader__wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

.default-button {
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
  margin: 0 0.5rem;
  border-radius: 10px;
  color: #222;
  letter-spacing: -0.2px;
  cursor: pointer;
  text-align: center;
  transition: background 250ms ease-in-out, transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  width: 100% !important;
  margin-bottom: 30px;
  font-size: 16px !important;
  font-weight: 500;
}

.default-button:hover {
  border: 1px #222 solid;
}

.button-primary:hover {
  border-color: #4b66ff;
}

.close-button {
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  letter-spacing: 0;
  border-radius: 50%;
  width: 28px;
  height: 28px;
  background-color: #ccc;
  cursor: pointer;
  text-align: center;
  transition: background 250ms ease-in-out, transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  font-size: 15px;
  font-weight: 200;
}

